--- a/package.json
+++ b/package.json
@@ -10,20 +10,29 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^15.2.0",
+    "@angular/animations": "^15.2.6",
+    "@angular/cdk": "^15.2.6",
     "@angular/common": "^15.2.0",
     "@angular/compiler": "^15.2.0",
     "@angular/core": "^15.2.0",
     "@angular/forms": "^15.2.0",
+    "@angular/material": "^15.2.6",
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@auth0/angular-jwt": "^5.1.2",
+    "@ng-bootstrap/ng-bootstrap": "^14.1.0",
     "@popperjs/core": "^2.11.7",
+    "@types/file-saver": "^2.0.5",
     "bootstrap": "^5.2.3",
+    "file-saver": "^2.0.5",
     "jquery": "^3.6.4",
+    "jwt-decode": "^3.1.2",
     "ngx-cookie-service": "^15.0.0",
+    "ngx-file-drop": "^15.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
