--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bootstrap": "^5.2.3",
     "file-saver": "^2.0.5",
     "jquery": "^3.6.4",
+    "jsonwebtoken": "^9.0.0",
     "jwt-decode": "^3.1.2",
     "ngx-cookie-service": "^15.0.0",
     "ngx-file-drop": "^15.0.0",
